tests/compile/attributes/test/fail/no_arguments.rs
#[sewage::test]
fn run() {}

fn main() {}
